# brave-core

./: DEPS  brave_paks.gni  package-lock.json  package.json  tsconfig.json
app/: brave_generated_resources.grd  brave_main_delegate.cc
browser/: BUILD.gn  brave_content_browser_client.cc  brave_performance_observers.cc  brave_performance_observers.h  brave_profile_prefs.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc
browser/brave_wallet/: BUILD.gn  brave_wallet_service_factory.cc  brave_wallet_utils.cc  brave_wallet_utils.h  brave_wallet_utils_unittest.cc
browser/extensions/: BUILD.gn  brave_extension_user_script_loader.cc  brave_extension_user_script_loader.h  brave_wallet_navigation_throttle.cc
browser/extensions/api/: brave_shields_api.cc
browser/page_load_metrics/: BUILD.gn  brave_page_load_metrics_embedder.cc  brave_page_load_metrics_embedder.h
browser/resources/: resource_ids
browser/ui/: BUILD.gn
browser/ui/webui/: brave_adblock_ui.cc  brave_new_tab_message_handler.cc  brave_rewards_page_ui.cc  brave_webui_source.cc
chromium_src/chrome/browser/: about_flags.cc
chromium_src/components/page_load_metrics/: page_load_metrics_embedder_base.cc
common/: brave_wallet_constants.h  pref_names.cc  pref_names.h
components/brave_ads/browser/: ad_notification.h  ads_service.h  ads_service_factory.cc  ads_service_impl.cc  ads_service_impl.h  ads_service_impl_unittest.cc  bundle_state_database.cc  bundle_state_database.h  locale_helper.cc
components/brave_new_tab_ui/: apiEventsToStore.ts  storage.ts
components/brave_new_tab_ui/actions/: new_tab_actions.ts  top_sites_actions.ts
components/brave_new_tab_ui/api/: bookmarks.ts  getActions.ts  initialData.ts  stats.ts  topSites.ts
components/brave_perf_predictor/browser/: BUILD.gn  bandwidth_linreg.cc  bandwidth_linreg.h  bandwidth_linreg_parameters.h  bandwidth_linreg_unittest.cc  bandwidth_savings_predictor.cc  bandwidth_savings_predictor.h  p3a_bandwidth_savings_permanent_state.cc  p3a_bandwidth_savings_permanent_state.h  p3a_bandwidth_savings_tracker.cc  p3a_bandwidth_savings_tracker.h  perf_predictor_p3a.cc  perf_predictor_p3a.h  perf_predictor_page_metrics_observer.cc  perf_predictor_page_metrics_observer.h  perf_predictor_tab_helper.cc  perf_predictor_tab_helper.h  perf_predictor_web_contents_observer.cc  perf_predictor_web_contents_observer.h  predictor.cc  predictor.h  predictor_unittest.cc  third_parties.h  third_party_extractor.cc  third_party_extractor.h  third_party_extractor_unittest.cc
components/brave_perf_predictor/browser/buildflags/: buildflags.gni
components/brave_perf_predictor/resources/: BUILD.gn  brave_perf_predictor_resources.grd
components/brave_rewards/browser/: BUILD.gn  (+4 more)
components/brave_savings/: README.md
components/brave_savings/browser/: BUILD.gn  perf_predictor_page_metrics_observer.cc  perf_predictor_page_metrics_observer.h  perf_predictor_web_contents_observer.cc  perf_predictor_web_contents_observer.h
components/brave_savings/browser/buildflags/: BUILD.gn  buildflags.gni
components/brave_sync/: brave_profile_sync_service_impl.cc
components/definitions/: chromel.d.ts  newTab.d.ts
components/resources/: brave_components_resources.grd  brave_components_strings.grd
components/test/: testData.ts
components/web3_provider/browser/: BUILD.gn  web3_provider_controller.cc  web3_provider_controller.h
extensions/browser/: brave_extension_user_script_loader.cc
patches/: build-android-bytecode-java-org-chromium-bytecode-ByteCodeProcessor.java.patch  chrome-browser-page_load_metrics-page_load_metrics_initialize.cc.patch  extensions-browser-extension_event_histogram_value.h.patch
test/: BUILD.gn
(+58 files in other folders)
