import("//build/config/features.gni")
import("//brave/components/brave_perf_predictor/browser/buildflags/buildflags.gni")

source_set("page_load_metrics") {
  sources = [
    "brave_page_load_metrics_embedder.cc",
    "brave_page_load_metrics_embedder.h",
  ]

  deps = [
    "//chrome/browser/extensions",
    "//components/page_load_metrics/browser",
    "//components/page_load_metrics/common",
    "//content/public/browser",
    "//url"
  ]

  if (enable_brave_perf_predictor) {
    deps += [
      "//brave/components/brave_perf_predictor/browser",
    ]
  }
}
