import("//brave/build/config.gni")

source_set("browser") {
  public_deps = [
    "buildflags",
  ]

  sources = [
    "predictor.h",
    "predictor.cc",
    "predictor_parameters.h",
    "third_party_extractor.h",
    "third_party_extractor.cc",
    "bandwidth_savings_predictor.h",
    "bandwidth_savings_predictor.cc",
    "perf_predictor_tab_helper.cc",
    "perf_predictor_tab_helper.h",
    "perf_predictor_page_metrics_observer.cc",
    "perf_predictor_page_metrics_observer.h",
  ]

  deps = [
    "//base",
    "//components/page_load_metrics/browser",
    "//components/page_load_metrics/common",
    "//components/sessions",
    "//content/public/browser",
    "//content/public/common",
    "//net/base/registry_controlled_domains",
    "//third_party/re2",
    "//brave/vendor/bat-native-rapidjson",
  ]
}