
source_set("browser") {
  public_deps = [
    # "buildflags",
  ]

  sources = [
    "perf_predictor_web_contents_observer.cc",
    "perf_predictor_web_contents_observer.h",
    "perf_predictor_page_metrics_observer.cc",
    "perf_predictor_page_metrics_observer.h",
  ]

  deps = [
    "//brave/vendor/brave_performance_predictor",
    "//components/page_load_metrics/browser",
    "//components/sessions",
    "//content/public/browser",
    "//content/public/common",
  ]
}